<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.boynux.sarafy.MainActivity" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_popup_sync"
        app:showAsAction="ifRoom"
        style="@android:style/Widget.ActionButton"
        android:actionLayout="@layout/refresh_action_view"
        android:title="@string/action_refresh"/>
    <!--
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    -->
    <item
        android:id="@+id/action_disclaimer"
        android:orderInCategory="100"
        android:title="@string/title_activity_disclaimer"
        app:showAsAction="never"
        android:actionLayout="@layout/activity_disclaimer"/>
    <item
        android:id="@+id/action_copyright"
        android:orderInCategory="100"
        android:title="@string/title_activity_copyright"
        app:showAsAction="never"
        android:actionLayout="@layout/activity_copyright"/>


</menu>
